Add latest resources to sidebar

--- a/ProfSite/Views/BravoVets/twitterfeed.cshtml
+++ b/ProfSite/Views/BravoVets/twitterfeed.cshtml
@@ -38,11 +38,12 @@
             </div>
         </div>
         <div class="col-md-4 social-content-column">
-            @Html.Action("BravectoContent", "BravovetsWidgets")
-            <div class="content-widget">
+           <div class="content-widget">
                 @Html.Action("SocialContent", "BravoVetsWidgets")
             </div>
-         
+            <div class="content-widget">
+                @Html.Action("BravectoContent", "BravovetsWidgets")
+            </div>
         </div>
     </div>
 </div>
