--- a/ProfSite/Views/BravoVets/facebookfeed.cshtml
+++ b/ProfSite/Views/BravoVets/facebookfeed.cshtml
@@ -36,9 +36,11 @@
             </div>
         </div>
         <div class="col-md-4 social-content-column">
-            @Html.Action("BravectoContent", "BravovetsWidgets")
             <div class="content-widget">
                 @Html.Action("SocialContent", "BravoVetsWidgets")
+            </div>
+            <div class="content-widget">
+                @Html.Action("BravectoContent", "BravovetsWidgets")
             </div>
         </div>
     </div>
