Comment Bravecto content from social tips

--- a/ProfSite/Views/BravoVets/SocialTips.cshtml
+++ b/ProfSite/Views/BravoVets/SocialTips.cshtml
@@ -64,7 +64,7 @@
         <div class="col-sm-4 socialtips-side additional-content-container">
             <h2>@bvResources.BravoVets_SocialTips_AdditionalContent</h2>
             <div class="additional-content">
-                @Html.Action("BravectoContent", "BravovetsWidgets", new { v = 2 })
+                @*Html.Action("BravectoContent", "BravovetsWidgets", new { v = 2 })*@
                 @Html.Action("TrendingTopics", "BravoVetsWidgets", new { v = 2 })
                 <div class="social-activity-wrapper">
                     @Html.Action("SocialActivity", "BravoVetsWidgets", new { v = 2 })
