--- a/ProfSite/Views/BravoVets/index.cshtml
+++ b/ProfSite/Views/BravoVets/index.cshtml
@@ -30,7 +30,7 @@
                     </div>
                     <div class="bottom-jumbo-overlay">
                         <h4>
-                            Extend flea and tick protection up to 12 weeks with a single chew.
+                            Extend flea and tick protection up to 12 weeks with a single chew.*
                         </h4>
                     </div>
                 </div>
@@ -83,6 +83,10 @@
             </div>
         </div>
     </div>
-    <footer class="selectsitefooter"></footer>
+    <footer class="selectsitefooter">
+
+        <p class="footer-disc">*BRAVECTO is effective against <i>Rhipicephalus sanguineus</i> (dog brown tick) for 8 weeks after dosing. The most common adverse reactions were mild and short-lived vomiting, decreased appetite diarrhea and drooling. For complete safety information, refer to product label.</p>
+
+    </footer>
 </body>
 </html>
