Removing some copy so it doesn’t sit over the share link

--- a/ProfSite/Views/BravoVets/social-content.cshtml
+++ b/ProfSite/Views/BravoVets/social-content.cshtml
@@ -104,7 +104,7 @@
             <div class="social-content-item-body">
                 <div class="social-content-content">
                     <h5>EXTENDING THE BEST EXPERIENCES WITH INNOVATIVE FLEA AND TICK CARE</h5>
-                    <p>Discover the latest innovation in flea and tick treatment and get all the information you need to deliver the best care and experience to your customers while growing your business with Bravecto.</p>
+                    <p>Discover the latest innovation in flea and tick treatment and get all the information you need to deliver the best care and experience @* to your customers while growing your business with Bravecto. *@</p>
                     <div class="action-wrapper">
                         <a href="#">
                             Share this
