Add messages tab to facebook page

--- a/ProfSite/Views/BravoVets/facebookfeed.cshtml
+++ b/ProfSite/Views/BravoVets/facebookfeed.cshtml
@@ -16,6 +16,7 @@
         <div class="col-md-8">
             <ul class="nav nav-tabs social-tabs facebook">
                 <li role="presentation" class="active"><a href="#feed">NEWSFEED</a></li>
+                <li role="presentation" class=""><a href="#messages">MESSAGES</a></li>
             </ul>
             <div class="tab-content">
                 <div role="tabpanel" class="tab-pane active" id="feed">
