Show subnavigation on editprofile if both accounts are linked

--- a/ProfSite/Views/BravoVets/Profile.cshtml
+++ b/ProfSite/Views/BravoVets/Profile.cshtml
@@ -51,6 +51,10 @@
         vetTextBoxStyle = "has-error";
     }
 
+    if(isFacebookLinked && isTwitterLinked) {
+        ViewBag.DisplaySubnavigation = true;
+    }
+
 }
 
 
