Compare bools instead of strings

--- a/ProfSite/Views/BravoVets/Profile.cshtml
+++ b/ProfSite/Views/BravoVets/Profile.cshtml
@@ -51,7 +51,7 @@
         vetTextBoxStyle = "has-error";
     }
 
-    if(isFacebookLinked && isTwitterLinked) {
+    if(Model.Veterinarian.IsFacebookLinked && Model.Veterinarian.IsTwitterLinked) {
         ViewBag.DisplaySubnavigation = true;
     }
 
