--- a/ProfSite/Views/BravoVets/facebookfeed.cshtml
+++ b/ProfSite/Views/BravoVets/facebookfeed.cshtml
@@ -61,7 +61,7 @@
                 }
             });
 
-            $(".content-widget").find(".share").socialPostDialog({ "dialogType": "trendingtopics", "fileupload": false });
+            $(".content-widget").find(".share").socialPostDialog({ "dialogType": "trendingtopics", "fileupload": true });
 
         });
     </script>
