--- a/ProfSite/Views/BravoVets/linked-accounts.cshtml
+++ b/ProfSite/Views/BravoVets/linked-accounts.cshtml
@@ -251,7 +251,7 @@
             $("#twitter").twitterTimeline({
                 loadTimeline: false,
                 callback: function () {
-                    $('#post-to-twitter').addClass('btn-default');
+                    $('#post-tweet').addClass('btn-default');
                 }
             });
             $('.btn-twitter-reply').on("click", function (e) {
