--- a/ProfSite/Views/BravoVets/twitterfeed.cshtml
+++ b/ProfSite/Views/BravoVets/twitterfeed.cshtml
@@ -58,7 +58,7 @@
             });
             $("#twitter").twitterTimeline({
                 callback: function () {
-                    $('#post-to-twitter').addClass('btn-default');
+                    $('#post-tweet').addClass('btn-default');
                 }
             });
             $('.btn-twitter-reply').on("click", function (e) {
