--- a/ProfSite/Views/Globalization/es/Twitter/Timeline.cshtml
+++ b/ProfSite/Views/Globalization/es/Twitter/Timeline.cshtml
@@ -1,6 +1,6 @@
 ﻿@model  TwitterTimeline
 
-<a id="post-to-twitter" class="btn btn-tweet">@Resource.BravoVets_Dashboard_PostToTwitter</a>
+<a id="post-tweet" class="btn btn-tweet">@Resource.BravoVets_Dashboard_PostToTwitter</a>
 <ul class="twitter-timeline social-feed list-unstyled">
     @foreach (var tweet in Model.Tweets)
     {
