--- a/ProfSite/Views/BravoVets/products.cshtml
+++ b/ProfSite/Views/BravoVets/products.cshtml
@@ -166,7 +166,7 @@
             keeping you in closer touch with your customers, and deepening your relationships.
         </p>
         <p>
-            <a class="orange" href="/bravecto/contact-us"><span class="orange">Contact your MSD sales representative</span></a> today to learn more
+            <a class="orange" href="/contact-us"><span class="orange">Contact your MSD sales representative</span></a> today to learn more
             and start prescribing Bravecto to the dogs you treat.
         </p>
         <p>
