--- a/ProfSite/Views/Shared/_Layout_Admin_Header.cshtml
+++ b/ProfSite/Views/Shared/_Layout_Admin_Header.cshtml
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="/dashboard" class="navbar-brand bravovets" target="_blank">
+                <a href="/linked-accounts" class="navbar-brand bravovets" target="_blank">
                     <img src="/images/logo-bravovets@2x.png" alt="Bravovets Logo" class="logo-bravovets">
                 </a>
             </div>
