--- a/ProfSite/Views/BravoVets/about-us.cshtml
+++ b/ProfSite/Views/BravoVets/about-us.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = ProfSite.Resources.Resource.AboutUsText;
     Layout = "~/Views/Shared/_LayoutBravovets.cshtml";
     ViewBag.DisplaySubnavigation = true;
+    ViewBag.SelectedNode = "aboutus";
 }
 
 <div class="container">
