--- a/ProfSite/Views/BravoVets/contact-us.cshtml
+++ b/ProfSite/Views/BravoVets/contact-us.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewBag.Title = "Contact Us";
     Layout = "~/Views/Shared/_LayoutBravovets.cshtml";
+    ViewBag.SelectedNode = "contactus";
     ViewBag.DisplaySubnavigation = true;
 }
 
