--- a/ProfSite/Views/BravoVets/resources.cshtml
+++ b/ProfSite/Views/BravoVets/resources.cshtml
@@ -57,170 +57,175 @@
         </div>
     </div>
 </div>
-<div class="static-body resources-body grey resources-body-less">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <h3>FILTER RESOURCES BY TOPIC / TYPE</h3>
-                <p>
-                    Check the boxes to the right to find resources about Bravecto filtered by topic or type.
-                </p>
-            </div>
-            <div class="col-md-6">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="checkbox-wrapper">
-                            <label>
-                                <input type="checkbox" value="informationalhowto" />
-                                INFORMATIONAL HOW-TO
-                            </label>
+<div id="resources">
+    <div class="static-body resources-body grey resources-body-less">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h3>FILTER RESOURCES BY TOPIC / TYPE</h3>
+                    <p>
+                        Check the boxes to the right to find resources about Bravecto filtered by topic or type.
+                    </p>
+                </div>
+                <div id="resource-filters" class="col-md-6">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="checkbox-wrapper">
+                                <label>
+                                    <input type="checkbox" value="informationalhowto" class="resource-filter" />
+                                    INFORMATIONAL HOW-TO
+                                </label>
+                            </div>
+                            <div class="checkbox-wrapper">
+                                <label>
+                                    <input type="checkbox" value="video" class="resource-filter" />
+                                    VIDEO
+                                </label>
+                            </div>
+                            <div class="checkbox-wrapper">
+                                <label>
+                                    <input type="checkbox" value="clinicdisplayuse" class="resource-filter" />
+                                    CLINIC DISPLAY USE
+                                </label>
+                            </div>
                         </div>
-                        <div class="checkbox-wrapper">
-                            <label>
-                                <input type="checkbox" value="video" />
-                                VIDEO
-                            </label>
-                        </div>
-                        <div class="checkbox-wrapper">
-                            <label>
-                                <input type="checkbox" value="clinicdisplayuse" />
-                                CLINIC DISPLAY USE
-                            </label>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="checkbox-wrapper">
-                            <label>
-                                <input type="checkbox" value="signage" /> SIGNAGE
-                            </label>
-                        </div>
-                        <div class="checkbox-wrapper">
-                            <label>
-                                <input type="checkbox" value="petownerdistribution" /> PET OWNER DISTRIBUTION
-                            </label>
-                        </div>
-                        <div class="checkbox-wrapper">
-                            <label>
-                                <input type="checkbox" value="researchpaper" />
-                                RESEARCH PAPER
-                            </label>
+                        <div class="col-md-6">
+                            <div class="checkbox-wrapper">
+                                <label>
+                                    <input type="checkbox" value="signage" class="resource-filter" /> SIGNAGE
+                                </label>
+                            </div>
+                            <div class="checkbox-wrapper">
+                                <label>
+                                    <input type="checkbox" value="petownerdistribution" class="resource-filter" /> PET OWNER DISTRIBUTION
+                                </label>
+                            </div>
+                            <div class="checkbox-wrapper">
+                                <label>
+                                    <input type="checkbox" value="researchpaper" class="resource-filter" />
+                                    RESEARCH PAPER
+                                </label>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="container static-body resources-container">
+        <div class="resources-list">
+            @*<div class="row">
+                <div class="resource-item col-md-6">
+                    <h4>VIDEO</h4>
+                    <div class="resource-item-body">
+                        <div class="resource-content">
+                            <h5>BRAVECTO OVERVIEW VIDEO</h5>
+                            <p>Lorem ipsum</p>
+                            <div class="action-wrapper">
+                                <a class="btn btn-default" href="#">
+                                    VIEW VIDEO
+                                    <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
+                                </a>
+                                <a href="#">
+                                    Share this
+                                    <i class="icon icon-share"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="resource-media-item">
+                            <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
+                        </div>
+                    </div>
+                </div>
+                <div class="resource-item col-md-6">
+                    <h4>POSTER</h4>
+                    <div class="resource-item-body">
+                        <div class="resource-content">
+                            <h5>FLEA AND TICK POSTER</h5>
+                            <p>Lorem ipsum</p>
+                            <div class="action-wrapper">
+                                <a class="btn btn-default" href="#">
+                                    DOWNLOAD
+                                    <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
+                                </a>
+                                <a href="#">
+                                    Share this
+                                    <i class="icon icon-share"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="resource-media-item">
+                            <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="resource-item col-md-6">
+                    <h4>VIDEO</h4>
+                    <div class="resource-item-body">
+                        <div class="resource-content">
+                            <h5>BRAVECTO EBOOK</h5>
+                            <p>Discover how prescribing innovative treatments</p>
+                            <div class="action-wrapper">
+                                <a class="btn btn-default" href="#">
+                                    DOWNLOAD
+                                    <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
+                                </a>
+                                <a href="#">
+                                    Share this
+                                    <i class="icon icon-share"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="resource-media-item">
+                            <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
+                        </div>
+                    </div>
+                </div>
+                <div class="resource-item col-md-6">
+                    <h4>INFOGRAPHIC</h4>
+                    <div class="resource-item-body">
+                        <div class="resource-content">
+                            <h5>THE UNTOLD STORY INFOGRAPHIC</h5>
+                            <p>Lorem</p>
+                            <div class="action-wrapper">
+                                <a class="btn btn-default" href="#">
+                                    DOWNLOAD
+                                    <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
+                                </a>
+                                <a href="#">
+                                    Share this
+                                    <i class="icon icon-share"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="resource-media-item">
+                            <img src="~/Content/img/3_5milbooklet.png" />
+                        </div>
+                    </div>
+                </div>
+            </div>*@
+        </div>
+        <div class="load-more-row row">
+            <div class="col-md-6 col-lg-offset-3">
+                <a href="#" class="load-more" id="load-more">
+                    LOAD MORE RESOURCES<br />
+                    <i class="glyphicon glyphicon-arrow-down"></i>
+                </a>
             </div>
         </div>
     </div>
 </div>
-<div class="container static-body resources-container">
-    <div class="resources-list">
-        <div class="row">
-            <div class="resource-item col-md-6">
-                <h4>VIDEO</h4>
-                <div class="resource-item-body">
-                    <div class="resource-content">
-                        <h5>BRAVECTO OVERVIEW VIDEO</h5>
-                        <p>Lorem ipsum</p>
-                        <div class="action-wrapper">
-                            <a class="btn btn-default" href="#">
-                                VIEW VIDEO
-                                <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
-                            </a>
-                            <a href="#">
-                                Share this
-                                <i class="icon icon-share"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="resource-media-item">
-                        <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
-                    </div>
-                </div>
-            </div>
-            <div class="resource-item col-md-6">
-                <h4>POSTER</h4>
-                <div class="resource-item-body">
-                    <div class="resource-content">
-                        <h5>FLEA AND TICK POSTER</h5>
-                        <p>Lorem ipsum</p>
-                        <div class="action-wrapper">
-                            <a class="btn btn-default" href="#">
-                                DOWNLOAD
-                                <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
-                            </a>
-                            <a href="#">
-                                Share this
-                                <i class="icon icon-share"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="resource-media-item">
-                        <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="resource-item col-md-6">
-                <h4>VIDEO</h4>
-                <div class="resource-item-body">
-                    <div class="resource-content">
-                        <h5>BRAVECTO EBOOK</h5>
-                        <p>Discover how prescribing innovative treatments</p>
-                        <div class="action-wrapper">
-                            <a class="btn btn-default" href="#">
-                                DOWNLOAD
-                                <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
-                            </a>
-                            <a href="#">
-                                Share this
-                                <i class="icon icon-share"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="resource-media-item">
-                        <img src="~/Content/img/Bravecto_Support_rolethumbnail.jpg" />
-                    </div>
-                </div>
-            </div>
-            <div class="resource-item col-md-6">
-                <h4>INFOGRAPHIC</h4>
-                <div class="resource-item-body">
-                    <div class="resource-content">
-                        <h5>THE UNTOLD STORY INFOGRAPHIC</h5>
-                        <p>Lorem</p>
-                        <div class="action-wrapper">
-                            <a class="btn btn-default" href="#">
-                                DOWNLOAD
-                                <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
-                            </a>
-                            <a href="#">
-                                Share this
-                                <i class="icon icon-share"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="resource-media-item">
-                        <img src="~/Content/img/3_5milbooklet.png" />
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="load-more-row row">
-        <div class="col-md-6 col-lg-offset-3">
-            <a href="#" class="load-more">
-                LOAD MORE RESOURCES<br />
-                <i class="glyphicon glyphicon-arrow-down"></i>
-            </a>
-        </div>
-    </div>
-</div>
-
 @section scripts {
+    <script src="~/Scripts/bravovetsresources.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
-            $('a.load-more').on('click', function (e) {
-                e.preventDefault();
+            $("#resources").resources({
+                filters: "input.resource-filter",
+                listName: "div.resources-list",
+                loadMore: '#load-more',
+                getUrl: "/GetBravovetsResources"
             });
         });
     </script>
